params aren't working so quick fix

--- a/training/LandRDemo_coreVeg.qmd
+++ b/training/LandRDemo_coreVeg.qmd
@@ -196,7 +196,10 @@ out <- setupProject(
   times = list(start = 2001, end = 2031),
   # 
   # # Module optional parameters
-  params = "PredictiveEcology/PredictiveEcology.org@training-book/tutos/LandRDemo_coreVeg/params.R",
+  #params = "PredictiveEcology/PredictiveEcology.org@training-book/tutos/LandRDemo_coreVeg/params.R",
+  params = list(
+  .globals = list(sppEquivCol = "Boreal", 
+  PSPdataTypes = "dummy")), 
   # 
   # # (more) INPUT OBJECTS -----------------------------------
   # # these come after, so that we don't need to pre-install/load LandR
