--- a/training/LandRDemo_coreVeg.qmd
+++ b/training/LandRDemo_coreVeg.qmd
@@ -62,7 +62,13 @@ if (!interactive()) {
 #   before it is in 
 packagePath <- file.path("packages", gsub(".[[:digit:]]{1,3}$", "", getRversion()))
 dir.create(packagePath, showWarnings = FALSE, recursive = TRUE)
-.libPaths(packagePath)
+withr::local_libpaths(packagePath)
+
+# Need this here because packageVersion(... ) fails without explicit lib.loc because SpaDES.project is already in RAM, and it is "OK in RAM", but not OK at lib.loc
+repos <- c("predictiveecology.r-universe.dev", getOption("repos"))
+# Need the latest version
+if (tryCatch(packageVersion("SpaDES.project", lib.loc = packagePath) < "0.1.1.9009", error = function(x) TRUE))
+  install.packages(c("SpaDES.project", "Require"), repos = repos, lib = packagePath)
 
 ```
 
@@ -134,7 +140,7 @@ then, our apologies for any inconvenience.
 # This repository is ours and it has the latest versions of our packages
 repos <- c("predictiveecology.r-universe.dev", getOption("repos"))
 # Need the latest version
-if (tryCatch(packageVersion("SpaDES.project") < "0.1.1", error = function(x) TRUE))
+if (tryCatch(packageVersion("SpaDES.project") < "0.1.1.9009", error = function(x) TRUE))
   install.packages(c("SpaDES.project", "Require"), repos = repos)
 ```
 
